--- a/.config/.cvimrc
+++ b/.config/.cvimrc
@@ -1,1 +1,3 @@
 unmap f
+let blacklists = ["https://lingualeo.com/*"]
+set langmap=ФИСВУАПРШОЛДЬТЩЗЙКЫЕГМЦЧНЯ;ABCDEFGHIJKLMNOPQRSTUVWXYZ,фисвуапршолдьтщзйкыегмцчня;abcdefghijklmnopqrstuvwxyz
