--- a/.config/.cvimrc
+++ b/.config/.cvimrc
@@ -1,3 +1,4 @@
 unmap f
 let blacklists = ["https://lingualeo.com/*"]
+let blacklists = ["https://stepik.org/*"]
 let langmap="ФИСВУАПРШОЛДЬТЩЗЙКЫЕГМЦЧНЯ;ABCDEFGHIJKLMNOPQRSTUVWXYZ,фисвуапршолдьтщзйкыегмцчня;abcdefghijklmnopqrstuvwxyz"
