--- a/.myvimrc
+++ b/.myvimrc
@@ -1,6 +1,6 @@
 set number
-<F8> :!clear && norminette -R CheckForbiddenSourceHeader %<CR>
-<F7> :!clear && gcc -Wall -Wextra -Werror *.c && ./a.out %<CR>
+map <F8> :!clear && norminette -R CheckForbiddenSourceHeader %<CR>
+map <F7> :!clear && gcc -Wall -Wextra -Werror *.c && ./a.out %<CR>
 map <F6> :!git add % && git commit -m '% ' && git push<left><left><left><left><left><left><left><left><left><left><left><left><left>
 map Ж :
 map Ф A
