--- a/.myvimrc
+++ b/.myvimrc
@@ -1,7 +1,8 @@
 set number
-map <F8> :!clear && norminette -R CheckForbiddenSourceHeader %<CR>
-map <F7> :!clear && gcc -Wall -Wextra -Werror *.c && ./a.out %<CR>
-map <F5> :!git add % && git commit -m '% '<left>
+map <F8> :!clear && norminette -R CheckForbiddenSourceHeader %<CR> " эта штука проверяет текущий файл в норминет
+map <F7> :!clear && gcc -Wall -Wextra -Werror *.c && ./a.out %<CR> " эта штука компилит все файлы .с в папке и запускает 
+map <F6> gg10zfj " эта штука просто скрывает заголовок
+map <F5> :!git add % && git commit -m '% '<left> " эта штука добавляет текущий файл в комит и комитит его (курсор будет в ковычках для ввода коммента)
 map Ж :
 map Ф A
 map И B
@@ -105,6 +106,6 @@ filetype plugin indent on    " required
 Plugin 'davidhalter/jedi-vim' " плагин автодополнения
 Plugin 'tpope/vim-surround' " плагин добавления скобок
 Plugin 'mbbill/code_complete' " автокомплит с
-Plugin 'morhetz/gruvbox'
-let g:auto_save = 1
-colorscheme gruvbox
+Plugin 'morhetz/gruvbox' " феноменальная и приятная песочная тема
+let g:auto_save = 1 " включение автосохранения
+colorscheme gruvbox " включение темы (обязательно после добавления плагина)
