add Ctrl+o to tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,3 +51,4 @@ set -g default-terminal "screen-256color"
 setw -g mode-keys vi
 set-option -sg escape-time 10
 set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -g prefix C-o
