add new-session fit to tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,3 +52,5 @@ setw -g mode-keys vi
 set-option -sg escape-time 10
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 set-option -g prefix C-o
+# if run as "tmux -2 attach", create a session if one does not already exist
+new-session -n $HOST
