изменено:      .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,6 +51,17 @@ set -g default-terminal "screen-256color"
 setw -g mode-keys vi
 set-option -sg escape-time 10
 set-option -sa terminal-overrides ',xterm-256color:RGB'
-set-option -g prefix C-o
+#set-option -g prefix C-o
 # if run as "tmux -2 attach", create a session if one does not already exist
 new-session -n $HOST
+                           
+bind j select-pane -L      
+bind j select-pane -D      
+bind k select-pane -U      
+bind l select-pane -R      
+                           
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
+
