изменено:      .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,7 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 # if run as "tmux -2 attach", create a session if one does not already exist
 new-session -n $HOST
                            
-bind j select-pane -L      
+bind h select-pane -L      
 bind j select-pane -D      
 bind k select-pane -U      
 bind l select-pane -R      
