--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,29 +1,8 @@
 ## COLORSCHEME: gruvbox dark
 set-option -g status "on"
-
-# default statusbar color
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+# default statusbar color set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 
 # default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
-
-# default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
-
-# active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
-
-# pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
-set-option -g pane-border-style fg=colour237 #bg1
-
-# message infos
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
-
-# writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
-
-# pane number display
 set-option -g display-panes-active-colour colour250 #fg2
 set-option -g display-panes-colour colour237 #bg1
 
@@ -54,14 +33,22 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 #set-option -g prefix C-o
 # if run as "tmux -2 attach", create a session if one does not already exist
 new-session -n $HOST
-                           
-bind h select-pane -L      
-bind j select-pane -D      
-bind k select-pane -U      
-bind l select-pane -R      
-                           
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
+# List of plugins
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+run '~/.tmux/plugins/tpm/tpm'
